feat: use toList() instead of collect(Collectors.toList())